--- a/index.html
+++ b/index.html
@@ -1,169 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Controle de Portaria (Firestore)</title>
-  <style>
-    body{font-family:Arial,Helvetica,sans-serif;background:#f4f6f8;padding:20px}
-    .card{background:#fff;padding:16px;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.06);max-width:1000px;margin:12px auto}
-    input,button{padding:8px;border-radius:6px;border:1px solid #cbd5e1}
-    button{cursor:pointer}
-    #status{margin-top:10px;padding:8px;border-radius:6px;background:#f8fafc;color:#0f172a}
-    .error{background:#fff1f2;color:#991b1b;border:1px solid #fecaca}
-    .ok{background:#ecfdf5;color:#064e3b;border:1px solid #bbf7d0}
-    table{width:100%;border-collapse:collapse;margin-top:10px;font-size:14px}
-    th,td{border:1px solid #e2e8f0;padding:6px;text-align:left}
-    th{background:#f1f5f9}
-    .saida-btn{background:#dc2626;color:#fff;border:none;padding:4px 8px;border-radius:4px;cursor:pointer}
-    .saida-btn[disabled]{background:#94a3b8;cursor:not-allowed}
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sistema de Portaria</title>
+  <script type="module" src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
-  <div class="card">
-    <h2>Controle de Portaria — Firestore</h2>
+<body class="bg-dark text-light p-4">
 
-    <form id="form" onsubmit="event.preventDefault(); registrarEntrada();">
-      <input id="nome" placeholder="Nome do visitante" required style="width:48%;margin-right:4%"/>
-      <input id="documento" placeholder="Documento (RG/CPF)" required style="width:48%"/><br/><br/>
-      <input id="veiculo" placeholder="Veículo / Placa" style="width:32%;margin-right:2%"/>
-      <input id="destino" placeholder="Destino" style="width:32%;margin-right:2%"/>
-      <input id="motivo" placeholder="Motivo" style="width:32%"/><br/><br/>
-      <button id="btnEntrar" type="submit">Registrar Entrada</button>
-    </form>
+  <div class="container">
+    <h1 class="text-center mb-4">📋 Sistema de Portaria</h1>
 
-    <div id="status" class="ok">Status: aguardando ação...</div>
+    <div class="card bg-secondary p-3 mb-4">
+      <div class="row g-3">
+        <div class="col-md-4">
+          <input id="nome" type="text" class="form-control" placeholder="Nome do visitante">
+        </div>
+        <div class="col-md-4">
+          <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)">
+        </div>
+        <div class="col-md-4">
+          <input id="empresa" type="text" class="form-control" placeholder="Empresa">
+        </div>
+      </div>
 
-    <h4>Registros Salvos</h4>
-    <table id="tabelaRegistros">
+      <div class="d-flex justify-content-center mt-3">
+        <button id="registrarEntrada" class="btn btn-success me-2">Registrar Entrada</button>
+        <button id="limpar" class="btn btn-danger">Limpar Campos</button>
+      </div>
+    </div>
+
+    <h3>Histórico de Entradas</h3>
+    <table class="table table-dark table-striped mt-3" id="tabela">
       <thead>
         <tr>
-          <th>Nome</th><th>Documento</th><th>Destino</th>
-          <th>Motivo</th><th>Status</th><th>Entrada</th><th>Saída</th><th>Ações</th>
+          <th>Nome</th>
+          <th>Documento</th>
+          <th>Empresa</th>
+          <th>Data / Hora</th>
         </tr>
       </thead>
-      <tbody id="listaRegistros"></tbody>
+      <tbody id="listaVisitantes"></tbody>
     </table>
   </div>
-
-  <script type="module">
-    // ---------------- FIREBASE IMPORTS ----------------
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getFirestore, collection, addDoc, updateDoc, doc,
-      serverTimestamp, onSnapshot, query, orderBy
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-    // ---------------- CONFIGURAÇÃO FIREBASE ----------------
-    const firebaseConfig = {
-      apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
-      authDomain: "portaria-e22ae.firebaseapp.com",
-      projectId: "portaria-e22ae",
-      storageBucket: "portaria-e22ae.firebasestorage.app",
-      messagingSenderId: "663485115589",
-      appId: "1:663485115589:web:4b2f860ede7f0f7b5854ac",
-      measurementId: "G-QEGQN6CTBB"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    // ---------------- ELEMENTOS ----------------
-    const statusEl = document.getElementById('status');
-    const listaEl = document.getElementById('listaRegistros');
-    const btnEntrar = document.getElementById('btnEntrar');
-
-    function setStatus(msg, type='ok'){
-      statusEl.textContent = 'Status: ' + msg;
-      statusEl.className = type === 'error' ? 'error' : 'ok';
-    }
-
-    // ---------------- REGISTRAR ENTRADA ----------------
-    async function registrarEntrada(){
-      setStatus('Gravando...');
-      btnEntrar.disabled = true;
-
-      const nome = document.getElementById('nome').value.trim();
-      const documento = document.getElementById('documento').value.trim();
-      const veiculo = document.getElementById('veiculo').value.trim();
-      const destino = document.getElementById('destino').value.trim();
-      const motivo = document.getElementById('motivo').value.trim();
-
-      if(!nome || !documento){
-        setStatus('Erro: nome e documento são obrigatórios.', 'error');
-        btnEntrar.disabled = false;
-        return;
-      }
-
-      try {
-        const payload = {
-          nome, documento, veiculo: veiculo || null,
-          destino: destino || null, motivo: motivo || null,
-          horarioEntrada: serverTimestamp(),
-          horarioSaida: null,
-          status: 'Entrada'
-        };
-        await addDoc(collection(db, 'registros_portaria'), payload);
-        setStatus('✅ Entrada registrada com sucesso!');
-        document.getElementById('form').reset();
-      } catch (err) {
-        setStatus('Erro ao gravar: ' + err.message, 'error');
-      } finally {
-        btnEntrar.disabled = false;
-      }
-    }
-
-    // ---------------- REGISTRAR SAÍDA ----------------
-    async function registrarSaida(id){
-      if(!confirm('Confirmar saída deste visitante?')) return;
-      try {
-        const ref = doc(db, 'registros_portaria', id);
-        await updateDoc(ref, {
-          status: 'Saída',
-          horarioSaida: serverTimestamp()
-        });
-        setStatus('Saída registrada com sucesso!');
-      } catch (err) {
-        setStatus('Erro ao registrar saída: ' + err.message, 'error');
-      }
-    }
-
-    // ---------------- LISTAR REGISTROS ----------------
-    function carregarRegistros(){
-      const q = query(collection(db, 'registros_portaria'), orderBy('horarioEntrada', 'desc'));
-      onSnapshot(q, (snapshot) => {
-        listaEl.innerHTML = '';
-        snapshot.forEach(docSnap => {
-          const d = docSnap.data();
-          const id = docSnap.id;
-          const entrada = d.horarioEntrada?.toDate ? d.horarioEntrada.toDate().toLocaleString() : '-';
-          const saida = d.horarioSaida?.toDate ? d.horarioSaida.toDate().toLocaleString() : '-';
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td>${d.nome || '-'}</td>
-            <td>${d.documento || '-'}</td>
-            <td>${d.destino || '-'}</td>
-            <td>${d.motivo || '-'}</td>
-            <td>${d.status || '-'}</td>
-            <td>${entrada}</td>
-            <td>${saida}</td>
-            <td>
-              <button class="saida-btn" ${d.status === 'Saída' ? 'disabled' : ''} onclick="registrarSaida('${id}')">
-                Registrar Saída
-              </button>
-            </td>
-          `;
-          listaEl.appendChild(tr);
-        });
-        setStatus(`Atualizado: ${snapshot.size} registro(s).`);
-      }, (err) => {
-        setStatus('Erro ao carregar: ' + err.message, 'error');
-      });
-    }
-
-    carregarRegistros();
-    window.registrarEntrada = registrarEntrada;
-    window.registrarSaida = registrarSaida;
-  </script>
 </body>
 </html>
