--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sistema de Portaria</title>
-  <script type="module" src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <script type="module" src="script.js" defer></script>
 </head>
-<body class="bg-dark text-light p-4">
 
+<body class="bg-dark text-light p-4">
   <div class="container">
     <h1 class="text-center mb-4">📋 Sistema de Portaria</h1>
 
-    <div class="card bg-secondary p-3 mb-4">
+    <!-- Formulário -->
+    <div class="card bg-secondary p-4 shadow-lg mb-4">
       <div class="row g-3">
         <div class="col-md-4">
           <input id="nome" type="text" class="form-control" placeholder="Nome do visitante">
@@ -21,28 +22,31 @@
           <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)">
         </div>
         <div class="col-md-4">
-          <input id="empresa" type="text" class="form-control" placeholder="Empresa">
+          <input id="empresa" type="text" class="form-control" placeholder="Empresa / Setor">
         </div>
       </div>
 
-      <div class="d-flex justify-content-center mt-3">
-        <button id="registrarEntrada" class="btn btn-success me-2">Registrar Entrada</button>
-        <button id="limpar" class="btn btn-danger">Limpar Campos</button>
+      <div class="d-flex justify-content-center mt-4">
+        <button id="registrarEntrada" class="btn btn-success me-3 px-4">Registrar Entrada</button>
+        <button id="limpar" class="btn btn-danger px-4">Limpar Campos</button>
       </div>
     </div>
 
-    <h3>Histórico de Entradas</h3>
-    <table class="table table-dark table-striped mt-3" id="tabela">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Documento</th>
-          <th>Empresa</th>
-          <th>Data / Hora</th>
-        </tr>
-      </thead>
-      <tbody id="listaVisitantes"></tbody>
-    </table>
+    <!-- Histórico -->
+    <div class="card bg-secondary p-3 shadow-lg">
+      <h3 class="text-center">Histórico de Entradas</h3>
+      <table class="table table-dark table-striped mt-3 text-center align-middle">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Documento</th>
+            <th>Empresa</th>
+            <th>Data / Hora</th>
+          </tr>
+        </thead>
+        <tbody id="listaVisitantes"></tbody>
+      </table>
+    </div>
   </div>
 </body>
 </html>
