--- a/index.html
+++ b/index.html
@@ -3,48 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sistema de Portaria</title>
+  <title>Controle de Portaria (Firebase Firestore)</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <script type="module" src="script.js" defer></script>
 </head>
 
 <body class="bg-dark text-light p-4">
   <div class="container">
-    <h1 class="text-center mb-4">📋 Sistema de Portaria</h1>
+    <h1 class="text-center mb-4">📋 Controle de Portaria</h1>
 
-    <!-- Formulário -->
+    <!-- Formulário de registro -->
     <div class="card bg-secondary p-4 shadow-lg mb-4">
       <div class="row g-3">
         <div class="col-md-4">
-          <input id="nome" type="text" class="form-control" placeholder="Nome do visitante">
+          <input id="nome" type="text" class="form-control" placeholder="Nome do visitante" required>
         </div>
         <div class="col-md-4">
-          <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)">
+          <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)" required>
         </div>
         <div class="col-md-4">
-          <input id="empresa" type="text" class="form-control" placeholder="Empresa / Setor">
+          <input id="veiculo" type="text" class="form-control" placeholder="Veículo / Placa">
+        </div>
+        <div class="col-md-4">
+          <input id="destino" type="text" class="form-control" placeholder="Destino / Setor">
+        </div>
+        <div class="col-md-4">
+          <input id="motivo" type="text" class="form-control" placeholder="Motivo da visita">
         </div>
       </div>
 
       <div class="d-flex justify-content-center mt-4">
-        <button id="registrarEntrada" class="btn btn-success me-3 px-4">Registrar Entrada</button>
-        <button id="limpar" class="btn btn-danger px-4">Limpar Campos</button>
+        <button id="btnRegistrar" class="btn btn-success me-3 px-4">Registrar Entrada</button>
+        <button id="btnLimpar" class="btn btn-danger px-4">Limpar</button>
       </div>
     </div>
 
     <!-- Histórico -->
     <div class="card bg-secondary p-3 shadow-lg">
-      <h3 class="text-center">Histórico de Entradas</h3>
-      <table class="table table-dark table-striped mt-3 text-center align-middle">
+      <h3 class="text-center mb-3">Histórico de Registros</h3>
+      <table class="table table-dark table-striped text-center align-middle">
         <thead>
           <tr>
             <th>Nome</th>
             <th>Documento</th>
-            <th>Empresa</th>
-            <th>Data / Hora</th>
+            <th>Veículo</th>
+            <th>Destino</th>
+            <th>Motivo</th>
+            <th>Status</th>
+            <th>Entrada</th>
+            <th>Saída</th>
           </tr>
         </thead>
-        <tbody id="listaVisitantes"></tbody>
+        <tbody id="listaRegistros"></tbody>
       </table>
     </div>
   </div>
