--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
       </div>
     </div>
 
+    <!-- Filtros -->
+    <div class="card bg-secondary p-3 shadow-lg mb-3">
+      <div class="row g-3 align-items-center">
+        <div class="col-md-6">
+          <input type="text" id="filtroBusca" class="form-control" placeholder="Buscar por nome ou documento...">
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="btn-group" role="group">
+            <button class="btn btn-outline-light" id="filtroTodos">Todos</button>
+            <button class="btn btn-outline-success" id="filtroEntrada">Entrada</button>
+            <button class="btn btn-outline-warning" id="filtroSaida">Saída</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Histórico -->
     <div class="card bg-secondary p-3 shadow-lg">
       <h3 class="text-center mb-3">Histórico de Registros</h3>
