--- a/index.html
+++ b/index.html
@@ -12,24 +12,14 @@
   <div class="container">
     <h1 class="text-center mb-4">📋 Controle de Portaria</h1>
 
-    <!-- Formulário de registro -->
+    <!-- Formulário -->
     <div class="card bg-secondary p-4 shadow-lg mb-4">
       <div class="row g-3">
-        <div class="col-md-4">
-          <input id="nome" type="text" class="form-control" placeholder="Nome do visitante" required>
-        </div>
-        <div class="col-md-4">
-          <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)" required>
-        </div>
-        <div class="col-md-4">
-          <input id="veiculo" type="text" class="form-control" placeholder="Veículo / Placa">
-        </div>
-        <div class="col-md-4">
-          <input id="destino" type="text" class="form-control" placeholder="Destino / Setor">
-        </div>
-        <div class="col-md-4">
-          <input id="motivo" type="text" class="form-control" placeholder="Motivo da visita">
-        </div>
+        <div class="col-md-4"><input id="nome" type="text" class="form-control" placeholder="Nome do visitante" required></div>
+        <div class="col-md-4"><input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)" required></div>
+        <div class="col-md-4"><input id="veiculo" type="text" class="form-control" placeholder="Veículo / Placa"></div>
+        <div class="col-md-4"><input id="destino" type="text" class="form-control" placeholder="Destino / Setor"></div>
+        <div class="col-md-4"><input id="motivo" type="text" class="form-control" placeholder="Motivo da visita"></div>
       </div>
 
       <div class="d-flex justify-content-center mt-4">
@@ -41,16 +31,33 @@
     <!-- Filtros -->
     <div class="card bg-secondary p-3 shadow-lg mb-3">
       <div class="row g-3 align-items-center">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <input type="text" id="filtroBusca" class="form-control" placeholder="Buscar por nome ou documento...">
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-4 text-center">
           <div class="btn-group" role="group">
             <button class="btn btn-outline-light" id="filtroTodos">Todos</button>
             <button class="btn btn-outline-success" id="filtroEntrada">Entrada</button>
             <button class="btn btn-outline-warning" id="filtroSaida">Saída</button>
           </div>
         </div>
+        <div class="col-md-4 text-center">
+          <select id="filtroData" class="form-select">
+            <option value="todos">📅 Todos os períodos</option>
+            <option value="hoje">Hoje</option>
+            <option value="7dias">Últimos 7 dias</option>
+            <option value="personalizado">Personalizado</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Intervalo de datas personalizado -->
+      <div id="intervaloDatas" class="mt-3 d-none text-center">
+        <label class="me-2">De:</label>
+        <input type="date" id="dataInicio" class="form-control d-inline-block w-auto me-2">
+        <label class="me-2">Até:</label>
+        <input type="date" id="dataFim" class="form-control d-inline-block w-auto">
+        <button id="btnAplicarData" class="btn btn-primary btn-sm ms-2">Aplicar</button>
       </div>
     </div>
 
