--- a/index.html
+++ b/index.html
@@ -1,96 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Controle de Portaria</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  .hoje { box-shadow: 0 0 0 3px rgba(34,197,94,0.08) inset; } /* destaque suave para hoje */
-  .counter-badge { font-size: 1.05rem; padding: .4rem .7rem; }
-</style>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Controle de Portaria - Firestore</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body{background:#f8fafc;padding:20px}
+    .log{font-family:monospace;white-space:pre-wrap;max-height:200px;overflow:auto;background:#0f172a;color:#e6eef8;padding:8px;border-radius:6px}
+  </style>
 </head>
-<body class="bg-dark text-light p-4">
+<body>
 <div class="container">
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h1 class="mb-0">📋 Controle de Portaria</h1>
-    <div>
-      <span class="badge bg-info text-dark counter-badge" id="contadorDentro">Dentro: 0</span>
-      <button id="btnExportCSV" class="btn btn-outline-light btn-sm ms-2">Exportar CSV</button>
-    </div>
-  </div>
+  <h2 class="mb-3 text-center">📋 Controle de Portaria (Firestore)</h2>
 
-  <!-- Formulário -->
-  <form id="formEntrada" class="card bg-secondary p-4 mb-4">
-    <div class="row g-3">
-      <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome do visitante" required></div>
-      <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento (RG/CPF)" required></div>
-      <div class="col-md-4"><input id="veiculo" class="form-control" placeholder="Veículo / Placa"></div>
-      <div class="col-md-4"><input id="destino" class="form-control" placeholder="Destino / Setor"></div>
-      <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo da visita"></div>
+  <form id="formEntrada" class="card p-3 mb-3">
+    <div class="row g-2">
+      <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome" required></div>
+      <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento" required></div>
+      <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo"></div>
     </div>
-    <div class="d-flex justify-content-center mt-4">
-      <button class="btn btn-success me-3 px-4" type="submit">Registrar Entrada</button>
-      <button type="button" id="btnLimpar" class="btn btn-danger px-4">Limpar</button>
+    <div class="text-center mt-3">
+      <button type="submit" class="btn btn-success">Registrar Entrada</button>
     </div>
   </form>
 
-  <!-- Filtros -->
-  <div class="card bg-secondary p-3 mb-3">
-    <div class="row g-3 align-items-center">
-      <div class="col-md-4"><input id="filtroBusca" class="form-control" placeholder="Buscar por nome ou documento..."></div>
+  <div id="status" class="alert alert-secondary">Status: aguardando...</div>
 
-      <div class="col-md-3 text-center">
-        <div class="btn-group" role="group">
-          <button class="btn btn-outline-light" id="filtroTodos">Todos</button>
-          <button class="btn btn-outline-success" id="filtroEntrada">Entrada</button>
-          <button class="btn btn-outline-warning" id="filtroSaida">Saída</button>
-        </div>
-      </div>
-
-      <div class="col-md-5 text-center">
-        <select id="filtroData" class="form-select">
-          <option value="todos">📅 Todos os períodos</option>
-          <option value="hoje">Hoje</option>
-          <option value="7dias">Últimos 7 dias</option>
-          <option value="personalizado">Personalizado</option>
-        </select>
-      </div>
-    </div>
-
-    <div id="intervaloDatas" class="mt-3 d-none text-center">
-      <label class="me-2">De:</label>
-      <input type="date" id="dataInicio" class="form-control d-inline-block w-auto me-2">
-      <label class="me-2">Até:</label>
-      <input type="date" id="dataFim" class="form-control d-inline-block w-auto">
-      <button id="btnAplicarData" class="btn btn-primary btn-sm ms-2">Aplicar</button>
-    </div>
-  </div>
-
-  <!-- Tabela -->
-  <div class="card bg-secondary p-3">
-    <h3 class="text-center mb-3">Histórico de Registros</h3>
-    <table class="table table-dark table-striped text-center align-middle">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Documento</th>
-          <th>Veículo</th>
-          <th>Destino</th>
-          <th>Motivo</th>
-          <th>Status</th>
-          <th>Entrada</th>
-          <th>Saída</th>
-        </tr>
-      </thead>
-      <tbody id="listaRegistros"></tbody>
-    </table>
-  </div>
+  <h5>Logs</h5>
+  <div id="consoleLog" class="log"></div>
 </div>
 
-<!-- Firebase (compat) -->
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
-<script src="script.js"></script>
+<!-- 🔥 SDKs compat (sem modules, sem import/export) -->
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
+
+<script>
+  // Config Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
+    authDomain: "portaria-e22ae.firebaseapp.com",
+    projectId: "portaria-e22ae",
+    storageBucket: "portaria-e22ae.firebasestorage.app",
+    messagingSenderId: "663485115589",
+    appId: "1:663485115589:web:b1c2fa0c96a2664aa88d7d"
+  };
+
+  // Inicializa Firebase (modo compat)
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  const registrosRef = db.collection("registros_portaria");
+  const logEl = document.getElementById("consoleLog");
+  const statusEl = document.getElementById("status");
+  const form = document.getElementById("formEntrada");
+
+  function log(msg){
+    const ts = new Date().toLocaleTimeString();
+    logEl.textContent = `[${ts}] ${msg}\n` + logEl.textContent;
+    console.log(msg);
+  }
+
+  function setStatus(msg, type="secondary"){
+    statusEl.className = "alert alert-" + type;
+    statusEl.textContent = "Status: " + msg;
+  }
+
+  form.addEventListener("submit", async (e)=>{
+    e.preventDefault();
+    const nome = document.getElementById("nome").value.trim();
+    const documento = document.getElementById("documento").value.trim();
+    const motivo = document.getElementById("motivo").value.trim();
+
+    if(!nome || !documento){
+      setStatus("Preencha nome e documento.", "warning");
+      return;
+    }
+
+    const dados = {
+      nome,
+      documento,
+      motivo: motivo || null,
+      horarioEntrada: new Date().toLocaleString("pt-BR"),
+      horarioSaida: null,
+      status: "Entrada",
+      criadoEm: firebase.firestore.FieldValue.serverTimestamp()
+    };
+
+    try {
+      setStatus("Gravando...", "info");
+      const ref = await registrosRef.add(dados);
+      log("✅ Registro criado com ID: " + ref.id);
+      setStatus("Entrada registrada com sucesso!", "success");
+      form.reset();
+    } catch (err) {
+      log("❌ Erro ao gravar: " + err.message);
+      setStatus("Erro ao gravar: " + err.message, "danger");
+    }
+  });
+
+  log("Firebase inicializado (modo compat). Pronto para gravar.");
+  setStatus("Pronto. Preencha e registre uma entrada.", "secondary");
+</script>
 </body>
 </html>
