--- a/index.html
+++ b/index.html
@@ -1,247 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Controle de Portaria - Firestore</title>
+  <title>Portaria - Debug</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body{background:#f8fafc;padding:20px}
-    .log{font-family:monospace;white-space:pre-wrap;max-height:200px;overflow:auto;background:#0f172a;color:#e6eef8;padding:8px;border-radius:6px}
-    table{font-size:0.9rem}
-    .table thead th{background:#e2e8f0}
+    .log{font-family:monospace;white-space:pre-wrap;max-height:160px;overflow:auto;background:#0f172a;color:#e6eef8;padding:8px;border-radius:6px}
+    #status{margin-top:8px}
   </style>
 </head>
-<body>
-<div class="container">
-  <h2 class="mb-3 text-center">📋 Controle de Portaria (Firestore)</h2>
+<body class="bg-dark text-light p-4">
+  <div class="container">
+    <h2>Teste Registro - Firestore (modular)</h2>
 
-  <!-- Formulário -->
-  <form id="formEntrada" class="card p-3 mb-3">
-    <div class="row g-2">
-      <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome" required></div>
-      <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento" required></div>
-      <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo"></div>
-    </div>
-    <div class="text-center mt-3">
-      <button type="submit" class="btn btn-success">Registrar Entrada</button>
-      <button type="button" id="btnSaida" class="btn btn-danger">Registrar Saída</button>
-    </div>
-  </form>
+    <form id="formEntrada" class="mb-3">
+      <div class="row g-2">
+        <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome" required></div>
+        <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento" required></div>
+        <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo"></div>
+      </div>
+      <div class="mt-3">
+        <button type="submit" class="btn btn-success">Registrar Entrada</button>
+      </div>
+    </form>
 
-  <!-- Filtros -->
-  <div class="card p-3 mb-3">
-    <h5>🔍 Filtros</h5>
-    <div class="row g-2 align-items-end">
-      <div class="col-md-3">
-        <label class="form-label">Data</label>
-        <input type="date" id="filtroData" class="form-control">
-      </div>
-      <div class="col-md-3">
-        <label class="form-label">Status</label>
-        <select id="filtroStatus" class="form-select">
-          <option value="">Todos</option>
-          <option value="Entrada">Entrada</option>
-          <option value="Saída">Saída</option>
-        </select>
-      </div>
-      <div class="col-md-3">
-        <button id="btnFiltrar" class="btn btn-primary">Aplicar Filtros</button>
-        <button id="btnLimpar" class="btn btn-secondary">Limpar</button>
-      </div>
-    </div>
+    <div id="status" class="alert alert-secondary">Status: aguardando</div>
+    <h5>Console</h5>
+    <div id="consoleLog" class="log"></div>
   </div>
 
-  <div id="status" class="alert alert-secondary">Status: aguardando...</div>
-
-  <!-- Tabela -->
-  <div class="table-responsive mb-3">
-    <table class="table table-bordered table-striped" id="tabelaRegistros">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Documento</th>
-          <th>Motivo</th>
-          <th>Entrada</th>
-          <th>Saída</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <h5>Logs</h5>
-  <div id="consoleLog" class="log"></div>
-</div>
-
-<!-- 🔥 SDK compatível -->
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
-
-<script>
-  // Config Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
-    authDomain: "portaria-e22ae.firebaseapp.com",
-    projectId: "portaria-e22ae",
-    storageBucket: "portaria-e22ae.firebasestorage.app",
-    messagingSenderId: "663485115589",
-    appId: "1:663485115589:web:b1c2fa0c96a2664aa88d7d"
-  };
-
-  // Inicializa Firebase
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const registrosRef = db.collection("registros_portaria");
-
-  const logEl = document.getElementById("consoleLog");
-  const statusEl = document.getElementById("status");
-  const tabelaBody = document.querySelector("#tabelaRegistros tbody");
-
-  function log(msg){
-    const ts = new Date().toLocaleTimeString();
-    logEl.textContent = `[${ts}] ${msg}\n` + logEl.textContent;
-    console.log(msg);
-  }
-
-  function setStatus(msg, type="secondary"){
-    statusEl.className = "alert alert-" + type;
-    statusEl.textContent = "Status: " + msg;
-  }
-
-  // Registrar entrada
-  document.getElementById("formEntrada").addEventListener("submit", async (e)=>{
-    e.preventDefault();
-    const nome = document.getElementById("nome").value.trim();
-    const documento = document.getElementById("documento").value.trim();
-    const motivo = document.getElementById("motivo").value.trim();
-
-    if(!nome || !documento){
-      setStatus("Preencha nome e documento.", "warning");
-      return;
-    }
-
-    const dados = {
-      nome,
-      documento,
-      motivo: motivo || null,
-      horarioEntrada: new Date().toLocaleString("pt-BR"),
-      horarioSaida: null,
-      status: "Entrada",
-      criadoEm: firebase.firestore.FieldValue.serverTimestamp()
-    };
-
-    try {
-      setStatus("Gravando entrada...", "info");
-      await registrosRef.add(dados);
-      log("✅ Entrada registrada: " + nome);
-      setStatus("Entrada registrada com sucesso!", "success");
-      e.target.reset();
-    } catch (err) {
-      log("❌ Erro ao gravar: " + err.message);
-      setStatus("Erro ao gravar: " + err.message, "danger");
-    }
-  });
-
-  // Registrar saída
-  document.getElementById("btnSaida").addEventListener("click", async ()=>{
-    const documento = document.getElementById("documento").value.trim();
-
-    if(!documento){
-      setStatus("Informe o documento para registrar saída.", "warning");
-      return;
-    }
-
-    try {
-      setStatus("Buscando registro de entrada...", "info");
-      const snapshot = await registrosRef
-        .where("documento", "==", documento)
-        .where("status", "==", "Entrada")
-        .orderBy("criadoEm", "desc")
-        .limit(1)
-        .get();
-
-      if(snapshot.empty){
-        setStatus("Nenhum registro de entrada ativo encontrado.", "warning");
-        log("Nenhum registro ativo encontrado para " + documento);
-        return;
-      }
-
-      const docRef = snapshot.docs[0].ref;
-      await docRef.update({
-        horarioSaida: new Date().toLocaleString("pt-BR"),
-        status: "Saída"
-      });
-
-      setStatus("Saída registrada com sucesso!", "success");
-      log("🚪 Saída registrada para documento: " + documento);
-      document.getElementById("formEntrada").reset();
-    } catch (err) {
-      setStatus("Erro ao registrar saída: " + err.message, "danger");
-      log("❌ Erro ao registrar saída: " + err.message);
-    }
-  });
-
-  // Carregar registros
-  let unsubscribe = null;
-
-  function carregarRegistros(filtroData="", filtroStatus="") {
-    if(unsubscribe) unsubscribe();
-
-    let query = registrosRef.orderBy("criadoEm", "desc");
-
-    if(filtroStatus){
-      query = query.where("status", "==", filtroStatus);
-    }
-
-    unsubscribe = query.onSnapshot(snapshot=>{
-      tabelaBody.innerHTML = "";
-
-      snapshot.forEach(doc=>{
-        const dados = doc.data();
-
-        if(filtroData){
-          const entrada = dados.horarioEntrada ? dados.horarioEntrada.split(" ")[0] : "";
-          if(!entrada.includes(filtroData.split("-").reverse().join("/"))) return;
-        }
-
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${dados.nome||""}</td>
-          <td>${dados.documento||""}</td>
-          <td>${dados.motivo||""}</td>
-          <td>${dados.horarioEntrada||""}</td>
-          <td>${dados.horarioSaida||""}</td>
-          <td>${dados.status||""}</td>
-        `;
-        tabelaBody.appendChild(tr);
-      });
-
-      log("📄 Registros atualizados: " + snapshot.size);
-      setStatus("Tabela atualizada com " + snapshot.size + " registros.", "info");
-    });
-  }
-
-  // Filtros
-  document.getElementById("btnFiltrar").addEventListener("click",(e)=>{
-    e.preventDefault();
-    const data = document.getElementById("filtroData").value;
-    const status = document.getElementById("filtroStatus").value;
-    carregarRegistros(data, status);
-  });
-
-  document.getElementById("btnLimpar").addEventListener("click",(e)=>{
-    e.preventDefault();
-    document.getElementById("filtroData").value = "";
-    document.getElementById("filtroStatus").value = "";
-    carregarRegistros();
-  });
-
-  // Inicialização
-  carregarRegistros();
-  log("🔥 Firebase inicializado e sincronização iniciada.");
-  setStatus("Pronto. Preencha o formulário e clique em 'Registrar Entrada' ou 'Registrar Saída'.", "secondary");
-</script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
