--- a/index.html
+++ b/index.html
@@ -1,35 +1,96 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Portaria - Debug</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .log{font-family:monospace;white-space:pre-wrap;max-height:160px;overflow:auto;background:#0f172a;color:#e6eef8;padding:8px;border-radius:6px}
-    #status{margin-top:8px}
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Controle de Portaria</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+  .hoje { box-shadow: 0 0 0 3px rgba(34,197,94,0.08) inset; } /* destaque suave para hoje */
+  .counter-badge { font-size: 1.05rem; padding: .4rem .7rem; }
+</style>
 </head>
 <body class="bg-dark text-light p-4">
-  <div class="container">
-    <h2>Teste Registro - Firestore (modular)</h2>
-
-    <form id="formEntrada" class="mb-3">
-      <div class="row g-2">
-        <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome" required></div>
-        <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento" required></div>
-        <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo"></div>
-      </div>
-      <div class="mt-3">
-        <button type="submit" class="btn btn-success">Registrar Entrada</button>
-      </div>
-    </form>
-
-    <div id="status" class="alert alert-secondary">Status: aguardando</div>
-    <h5>Console</h5>
-    <div id="consoleLog" class="log"></div>
+<div class="container">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h1 class="mb-0">📋 Controle de Portaria</h1>
+    <div>
+      <span class="badge bg-info text-dark counter-badge" id="contadorDentro">Dentro: 0</span>
+      <button id="btnExportCSV" class="btn btn-outline-light btn-sm ms-2">Exportar CSV</button>
+    </div>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <!-- Formulário -->
+  <form id="formEntrada" class="card bg-secondary p-4 mb-4">
+    <div class="row g-3">
+      <div class="col-md-4"><input id="nome" class="form-control" placeholder="Nome do visitante" required></div>
+      <div class="col-md-4"><input id="documento" class="form-control" placeholder="Documento (RG/CPF)" required></div>
+      <div class="col-md-4"><input id="veiculo" class="form-control" placeholder="Veículo / Placa"></div>
+      <div class="col-md-4"><input id="destino" class="form-control" placeholder="Destino / Setor"></div>
+      <div class="col-md-4"><input id="motivo" class="form-control" placeholder="Motivo da visita"></div>
+    </div>
+    <div class="d-flex justify-content-center mt-4">
+      <button class="btn btn-success me-3 px-4" type="submit">Registrar Entrada</button>
+      <button type="button" id="btnLimpar" class="btn btn-danger px-4">Limpar</button>
+    </div>
+  </form>
+
+  <!-- Filtros -->
+  <div class="card bg-secondary p-3 mb-3">
+    <div class="row g-3 align-items-center">
+      <div class="col-md-4"><input id="filtroBusca" class="form-control" placeholder="Buscar por nome ou documento..."></div>
+
+      <div class="col-md-3 text-center">
+        <div class="btn-group" role="group">
+          <button class="btn btn-outline-light" id="filtroTodos">Todos</button>
+          <button class="btn btn-outline-success" id="filtroEntrada">Entrada</button>
+          <button class="btn btn-outline-warning" id="filtroSaida">Saída</button>
+        </div>
+      </div>
+
+      <div class="col-md-5 text-center">
+        <select id="filtroData" class="form-select">
+          <option value="todos">📅 Todos os períodos</option>
+          <option value="hoje">Hoje</option>
+          <option value="7dias">Últimos 7 dias</option>
+          <option value="personalizado">Personalizado</option>
+        </select>
+      </div>
+    </div>
+
+    <div id="intervaloDatas" class="mt-3 d-none text-center">
+      <label class="me-2">De:</label>
+      <input type="date" id="dataInicio" class="form-control d-inline-block w-auto me-2">
+      <label class="me-2">Até:</label>
+      <input type="date" id="dataFim" class="form-control d-inline-block w-auto">
+      <button id="btnAplicarData" class="btn btn-primary btn-sm ms-2">Aplicar</button>
+    </div>
+  </div>
+
+  <!-- Tabela -->
+  <div class="card bg-secondary p-3">
+    <h3 class="text-center mb-3">Histórico de Registros</h3>
+    <table class="table table-dark table-striped text-center align-middle">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Documento</th>
+          <th>Veículo</th>
+          <th>Destino</th>
+          <th>Motivo</th>
+          <th>Status</th>
+          <th>Entrada</th>
+          <th>Saída</th>
+        </tr>
+      </thead>
+      <tbody id="listaRegistros"></tbody>
+    </table>
+  </div>
+</div>
+
+<!-- Firebase (compat) -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
